{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 138,
  "lineage": "bfb1b59f-7a81-cf6a-64eb-9655f23a0a60",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "ANSIBLE-DR-NIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-neu-dr-rg/providers/Microsoft.Network/networkInterfaces/ANSIBLE-DR-NIC",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.1.111",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-neu-dr-rg/providers/Microsoft.Network/publicIPAddresses/Grupo2-NEU-DR-ANSIBLE-PIP",
                "subnet_id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-neu-dr-rg/providers/Microsoft.Network/virtualNetworks/Grupo2-NEU-DR-VNET/subnets/GRUPO2-NEU-DR-ANISBLE-SUBNET"
              }
            ],
            "location": "northeurope",
            "mac_address": "7C-1E-52-20-EC-D5",
            "name": "ANSIBLE-DR-NIC",
            "private_ip_address": "10.1.1.111",
            "private_ip_addresses": [
              "10.1.1.111"
            ],
            "resource_group_name": "grupo2-neu-dr-rg",
            "virtual_machine_id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-neu-dr-rg/providers/Microsoft.Compute/virtualMachines/Grupo2-NEU-DR-ANSIBLE"
          },
          "dependencies": [
            "azurerm_public_ip.grupo2-neu-dr-ansible-pip",
            "azurerm_subnet.grupo2-neu-dr-ansible-subnet",
            "azurerm_virtual_network.grupo2-neu-dr-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "ANSIBLE-PROD-NIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-weu-prod-rg/providers/Microsoft.Network/networkInterfaces/ANSIBLE-PROD-NIC",
            "internal_domain_name_suffix": "5pqfjqovlfierelwex24gxfime.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.111",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-weu-prod-rg/providers/Microsoft.Network/publicIPAddresses/Grupo2-WEU-PROD-ANSIBLE-PIP",
                "subnet_id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-weu-prod-rg/providers/Microsoft.Network/virtualNetworks/Grupo2-WEU-PROD-VNET/subnets/GRUPO2-WEU-PROD-ANSIBLE-SUBNET"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-2E-26-91",
            "name": "ANSIBLE-PROD-NIC",
            "private_ip_address": "10.0.1.111",
            "private_ip_addresses": [
              "10.0.1.111"
            ],
            "resource_group_name": "grupo2-weu-prod-rg",
            "virtual_machine_id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-weu-prod-rg/providers/Microsoft.Compute/virtualMachines/Grupo2-WEU-PROD-ANSIBLE"
          },
          "dependencies": [
            "azurerm_public_ip.grupo2-weu-prod-ansible-pip",
            "azurerm_subnet.grupo2-weu-prod-ansible-subnet",
            "azurerm_virtual_network.grupo2-weu-prod-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "DATABASESERVER-DR-NIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-neu-dr-rg/providers/Microsoft.Network/networkInterfaces/DATABASE-DR-NIC",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.2.15",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-neu-dr-rg/providers/Microsoft.Network/virtualNetworks/Grupo2-NEU-DR-VNET/subnets/GRUPO2-NEU-DR-SUBNET"
              }
            ],
            "location": "northeurope",
            "mac_address": "00-22-48-A3-82-90",
            "name": "DATABASE-DR-NIC",
            "private_ip_address": "10.1.2.15",
            "private_ip_addresses": [
              "10.1.2.15"
            ],
            "resource_group_name": "grupo2-neu-dr-rg",
            "virtual_machine_id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-neu-dr-rg/providers/Microsoft.Compute/virtualMachines/Grupo2-NEU-DR-DATABASESERVER"
          },
          "dependencies": [
            "azurerm_subnet.grupo2-neu-dr-subnet",
            "azurerm_virtual_network.grupo2-neu-dr-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "DATABASESERVER-PROD-NIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-weu-prod-rg/providers/Microsoft.Network/networkInterfaces/DATABASE-PROD-NIC",
            "internal_domain_name_suffix": "5pqfjqovlfierelwex24gxfime.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.15",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-weu-prod-rg/providers/Microsoft.Network/virtualNetworks/Grupo2-WEU-PROD-VNET/subnets/GRUPO2-WEU-PROD-SUBNET"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-AB-20-0E",
            "name": "DATABASE-PROD-NIC",
            "private_ip_address": "10.0.2.15",
            "private_ip_addresses": [
              "10.0.2.15"
            ],
            "resource_group_name": "grupo2-weu-prod-rg",
            "virtual_machine_id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-weu-prod-rg/providers/Microsoft.Compute/virtualMachines/Grupo2-WEU-PROD-DATABASESERVER"
          },
          "dependencies": [
            "azurerm_subnet.grupo2-weu-prod-subnet",
            "azurerm_virtual_network.grupo2-weu-prod-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "WEBSERVER-DR-NIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-neu-dr-rg/providers/Microsoft.Network/networkInterfaces/WEBSERVER-DR-NIC",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.2.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-neu-dr-rg/providers/Microsoft.Network/virtualNetworks/Grupo2-NEU-DR-VNET/subnets/GRUPO2-NEU-DR-SUBNET"
              }
            ],
            "location": "northeurope",
            "mac_address": "60-45-BD-E0-95-5A",
            "name": "WEBSERVER-DR-NIC",
            "private_ip_address": "10.1.2.10",
            "private_ip_addresses": [
              "10.1.2.10"
            ],
            "resource_group_name": "grupo2-neu-dr-rg",
            "virtual_machine_id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-neu-dr-rg/providers/Microsoft.Compute/virtualMachines/Grupo2-NEU-DR-WEBSERVER"
          },
          "dependencies": [
            "azurerm_subnet.grupo2-neu-dr-subnet",
            "azurerm_virtual_network.grupo2-neu-dr-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "WEBSERVER-PROD-NIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-weu-prod-rg/providers/Microsoft.Network/networkInterfaces/WEBSERVER-PROD-NIC",
            "internal_domain_name_suffix": "5pqfjqovlfierelwex24gxfime.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-weu-prod-rg/providers/Microsoft.Network/virtualNetworks/Grupo2-WEU-PROD-VNET/subnets/GRUPO2-WEU-PROD-SUBNET"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-22-48-84-1D-1D",
            "name": "WEBSERVER-PROD-NIC",
            "private_ip_address": "10.0.2.10",
            "private_ip_addresses": [
              "10.0.2.10"
            ],
            "resource_group_name": "grupo2-weu-prod-rg",
            "virtual_machine_id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-weu-prod-rg/providers/Microsoft.Compute/virtualMachines/Grupo2-WEU-PROD-WEBSERVER"
          },
          "dependencies": [
            "azurerm_subnet.grupo2-weu-prod-subnet",
            "azurerm_virtual_network.grupo2-weu-prod-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "WINDOWS-DR-NIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-neu-dr-rg/providers/Microsoft.Network/networkInterfaces/WINDOWS-DR-NIC",
            "internal_domain_name_suffix": "l2k5eycmchoubiungjbdx5cf3g.fx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.2.20",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-neu-dr-rg/providers/Microsoft.Network/publicIPAddresses/Grupo2-NEU-DR-WINDOWS-PIP",
                "subnet_id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-neu-dr-rg/providers/Microsoft.Network/virtualNetworks/Grupo2-NEU-DR-VNET/subnets/GRUPO2-NEU-DR-SUBNET"
              }
            ],
            "location": "northeurope",
            "mac_address": "00-22-48-A3-89-19",
            "name": "WINDOWS-DR-NIC",
            "private_ip_address": "10.1.2.20",
            "private_ip_addresses": [
              "10.1.2.20"
            ],
            "resource_group_name": "grupo2-neu-dr-rg",
            "virtual_machine_id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-neu-dr-rg/providers/Microsoft.Compute/virtualMachines/Grupo2-NEU-DR-WINDOWSSERVER"
          },
          "dependencies": [
            "azurerm_public_ip.grupo2-neu-dr-windows-pip",
            "azurerm_subnet.grupo2-neu-dr-subnet",
            "azurerm_virtual_network.grupo2-neu-dr-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "WINDOWS-PROD-NIC",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-weu-prod-rg/providers/Microsoft.Network/networkInterfaces/WINDOWS-PROD-NIC",
            "internal_domain_name_suffix": "5pqfjqovlfierelwex24gxfime.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.20",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-weu-prod-rg/providers/Microsoft.Network/publicIPAddresses/Grupo2-WEU-PROD-WINDOWS-PIP",
                "subnet_id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-weu-prod-rg/providers/Microsoft.Network/virtualNetworks/Grupo2-WEU-PROD-VNET/subnets/GRUPO2-WEU-PROD-SUBNET"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-22-48-8B-72-D0",
            "name": "WINDOWS-PROD-NIC",
            "private_ip_address": "10.0.2.20",
            "private_ip_addresses": [
              "10.0.2.20"
            ],
            "resource_group_name": "grupo2-weu-prod-rg",
            "virtual_machine_id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-weu-prod-rg/providers/Microsoft.Compute/virtualMachines/Grupo2-WEU-PROD-WINDOWSSERVER"
          },
          "dependencies": [
            "azurerm_public_ip.grupo2-weu-prod-windows-pip",
            "azurerm_subnet.grupo2-weu-prod-subnet",
            "azurerm_virtual_network.grupo2-weu-prod-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "WindowsServerDR-NIC-NSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-neu-dr-rg/providers/Microsoft.Network/networkInterfaces/WINDOWS-DR-NIC|/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-neu-dr-rg/providers/Microsoft.Network/networkSecurityGroups/Grupo2-WEU-PROD-WINDOWSSERVER-NSG",
            "network_interface_id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-neu-dr-rg/providers/Microsoft.Network/networkInterfaces/WINDOWS-DR-NIC",
            "network_security_group_id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-neu-dr-rg/providers/Microsoft.Network/networkSecurityGroups/Grupo2-WEU-PROD-WINDOWSSERVER-NSG"
          },
          "dependencies": [
            "azurerm_network_interface.WINDOWS-DR-NIC",
            "azurerm_network_security_group.grupo2-neu-dr-WINDOWSSERVER-nsg",
            "azurerm_public_ip.grupo2-neu-dr-windows-pip",
            "azurerm_subnet.grupo2-neu-dr-subnet",
            "azurerm_virtual_network.grupo2-neu-dr-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "WindowsServerPROD-NIC-NSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-weu-prod-rg/providers/Microsoft.Network/networkInterfaces/WINDOWS-PROD-NIC|/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-weu-prod-rg/providers/Microsoft.Network/networkSecurityGroups/Grupo2-WEU-PROD-WINDOWSSERVER-NSG",
            "network_interface_id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-weu-prod-rg/providers/Microsoft.Network/networkInterfaces/WINDOWS-PROD-NIC",
            "network_security_group_id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-weu-prod-rg/providers/Microsoft.Network/networkSecurityGroups/Grupo2-WEU-PROD-WINDOWSSERVER-NSG"
          },
          "dependencies": [
            "azurerm_network_interface.WINDOWS-PROD-NIC",
            "azurerm_network_security_group.grupo2-weu-prod-WINDOWSSERVER-nsg",
            "azurerm_public_ip.grupo2-weu-prod-windows-pip",
            "azurerm_subnet.grupo2-weu-prod-subnet",
            "azurerm_virtual_network.grupo2-weu-prod-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "grupo2-neu-dr-WINDOWSSERVER-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-neu-dr-rg/providers/Microsoft.Network/networkSecurityGroups/Grupo2-WEU-PROD-WINDOWSSERVER-NSG",
            "location": "northeurope",
            "name": "Grupo2-WEU-PROD-WINDOWSSERVER-NSG",
            "resource_group_name": "grupo2-neu-dr-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "RDP",
                "priority": 1000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "grupo2-weu-prod-WINDOWSSERVER-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-weu-prod-rg/providers/Microsoft.Network/networkSecurityGroups/Grupo2-WEU-PROD-WINDOWSSERVER-NSG",
            "location": "westeurope",
            "name": "Grupo2-WEU-PROD-WINDOWSSERVER-NSG",
            "resource_group_name": "grupo2-weu-prod-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "RDP",
                "priority": 1000,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "grupo2-neu-dr-ansible-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-neu-dr-rg/providers/Microsoft.Network/publicIPAddresses/Grupo2-NEU-DR-ANSIBLE-PIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "23.102.24.139",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "Grupo2-NEU-DR-ANSIBLE-PIP",
            "resource_group_name": "grupo2-neu-dr-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "grupo2-neu-dr-windows-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-neu-dr-rg/providers/Microsoft.Network/publicIPAddresses/Grupo2-NEU-DR-WINDOWS-PIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.169.0.166",
            "ip_version": "IPv4",
            "location": "northeurope",
            "name": "Grupo2-NEU-DR-WINDOWS-PIP",
            "resource_group_name": "grupo2-neu-dr-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "grupo2-weu-prod-ansible-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-weu-prod-rg/providers/Microsoft.Network/publicIPAddresses/Grupo2-WEU-PROD-ANSIBLE-PIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.126.141.214",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "Grupo2-WEU-PROD-ANSIBLE-PIP",
            "resource_group_name": "grupo2-weu-prod-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "grupo2-weu-prod-windows-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "No-Zone",
            "id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-weu-prod-rg/providers/Microsoft.Network/publicIPAddresses/Grupo2-WEU-PROD-WINDOWS-PIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.144.162.10",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "Grupo2-WEU-PROD-WINDOWS-PIP",
            "resource_group_name": "grupo2-weu-prod-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "grupo2-neu-dr-ansible-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.1.0/24",
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-neu-dr-rg/providers/Microsoft.Network/virtualNetworks/Grupo2-NEU-DR-VNET/subnets/GRUPO2-NEU-DR-ANISBLE-SUBNET",
            "name": "GRUPO2-NEU-DR-ANISBLE-SUBNET",
            "resource_group_name": "grupo2-neu-dr-rg",
            "virtual_network_name": "Grupo2-NEU-DR-VNET"
          },
          "dependencies": [
            "azurerm_virtual_network.grupo2-neu-dr-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "grupo2-neu-dr-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.1.2.0/24",
            "address_prefixes": [
              "10.1.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-neu-dr-rg/providers/Microsoft.Network/virtualNetworks/Grupo2-NEU-DR-VNET/subnets/GRUPO2-NEU-DR-SUBNET",
            "name": "GRUPO2-NEU-DR-SUBNET",
            "resource_group_name": "grupo2-neu-dr-rg",
            "virtual_network_name": "Grupo2-NEU-DR-VNET"
          },
          "dependencies": [
            "azurerm_virtual_network.grupo2-neu-dr-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "grupo2-weu-prod-ansible-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-weu-prod-rg/providers/Microsoft.Network/virtualNetworks/Grupo2-WEU-PROD-VNET/subnets/GRUPO2-WEU-PROD-ANSIBLE-SUBNET",
            "name": "GRUPO2-WEU-PROD-ANSIBLE-SUBNET",
            "resource_group_name": "grupo2-weu-prod-rg",
            "virtual_network_name": "Grupo2-WEU-PROD-VNET"
          },
          "dependencies": [
            "azurerm_virtual_network.grupo2-weu-prod-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "grupo2-weu-prod-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-weu-prod-rg/providers/Microsoft.Network/virtualNetworks/Grupo2-WEU-PROD-VNET/subnets/GRUPO2-WEU-PROD-SUBNET",
            "name": "GRUPO2-WEU-PROD-SUBNET",
            "resource_group_name": "grupo2-weu-prod-rg",
            "virtual_network_name": "Grupo2-WEU-PROD-VNET"
          },
          "dependencies": [
            "azurerm_virtual_network.grupo2-weu-prod-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "grupo2-neu-dr-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "60f2155f-114c-40dd-a28d-32423bfc45ee",
            "id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-neu-dr-rg/providers/Microsoft.Network/virtualNetworks/Grupo2-NEU-DR-VNET",
            "location": "northeurope",
            "name": "Grupo2-NEU-DR-VNET",
            "resource_group_name": "grupo2-neu-dr-rg",
            "subnet": [
              {
                "address_prefix": "10.1.1.0/24",
                "id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-neu-dr-rg/providers/Microsoft.Network/virtualNetworks/Grupo2-NEU-DR-VNET/subnets/GRUPO2-NEU-DR-ANISBLE-SUBNET",
                "name": "GRUPO2-NEU-DR-ANISBLE-SUBNET"
              },
              {
                "address_prefix": "10.1.2.0/24",
                "id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-neu-dr-rg/providers/Microsoft.Network/virtualNetworks/Grupo2-NEU-DR-VNET/subnets/GRUPO2-NEU-DR-SUBNET",
                "name": "GRUPO2-NEU-DR-SUBNET"
              }
            ],
            "vm_protection_enabled": false
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "grupo2-weu-prod-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "c154e0fb-59d5-4850-9176-25f9e35ca864",
            "id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-weu-prod-rg/providers/Microsoft.Network/virtualNetworks/Grupo2-WEU-PROD-VNET",
            "location": "westeurope",
            "name": "Grupo2-WEU-PROD-VNET",
            "resource_group_name": "grupo2-weu-prod-rg",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-weu-prod-rg/providers/Microsoft.Network/virtualNetworks/Grupo2-WEU-PROD-VNET/subnets/GRUPO2-WEU-PROD-ANSIBLE-SUBNET",
                "name": "GRUPO2-WEU-PROD-ANSIBLE-SUBNET"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/c34f0752-7151-4ee1-ac5c-6369a3e67318/resourceGroups/grupo2-weu-prod-rg/providers/Microsoft.Network/virtualNetworks/Grupo2-WEU-PROD-VNET/subnets/GRUPO2-WEU-PROD-SUBNET",
                "name": "GRUPO2-WEU-PROD-SUBNET"
              }
            ],
            "vm_protection_enabled": false
          }
        }
      ]
    }
  ]
}